feat(device): 更新设备相关表名并配置 JPA 扫描路径
- 将 device_account 表重命名为 pcd_device_account
- 将 device_online_time_record 表重命名为 pcd_device_online_time_record
- 将 device_reconnect_record 表重命名为 pcd_device_reconnect_record
- 在 DeviceServiceApplication 中启用 JPA Repositories 和 Entity 扫描
- 添加 Flyway 数据库迁移依赖项

fix(auth): 优化分页大小限制逻辑

- 使用 Math.clamp 替代 Math.min 和 Math.max 组合以限制分页大小

docs(auth): 完善控制器接口注释和安全事件类型枚举注释

- 为 InternalAccountSecurityController 中的接口添加详细注释
- 为 SecurityEventType 枚举值添加中文说明

refactor(auth): 调整 ApiKeyEntity 类注释语言为中文

- 将 ApiKeyEntity 的类注释翻译为中文并补充作者信息